完成worker的进程启动和状态信息上报，TODO 目前worker还存在问题